--- a/app/views copy/pages/users.html
+++ b/app/views copy/pages/users.html
@@ -221,7 +221,7 @@
 			<article class="artist">
 				<a class="artist-header" href="#">
 					<div class="avatar">
-						<img src="/img/artists/artist1.jpg">
+						<img src="/img/artists/artist.jpg">
 					</div>
 					<div class="info">
 						<p class="high-text" data-size='small'>{{ user.firstname }}</p>
